--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -161,6 +161,7 @@
             ,
             getParam: function () {
                 return {
+                    date:this.datetime.toLocaleDateString(),
                     pageNum: this.page,
                     pageSize: this.rows,
                     mt: this.mt,
