--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -132,7 +132,7 @@
         methods: {
             getTree: function () {
                 axios
-                    .get('http://localhost/crawler/getTree', {
+                    .get('http://y21bpmh.nat.ipyingshe.com/crawler/getTree', {
                         params: {
                             date: this.dateToString(this.datetime)
                         }
@@ -155,7 +155,7 @@
             ,
             getPage: function () {
                 axios
-                    .post('http://localhost/crawler/getPage', this.getParam())
+                    .post('http://y21bpmh.nat.ipyingshe.com/crawler/getPage', this.getParam())
                     .then(res => {
                     this.tableData = res.data.list;
                 this.total = res.data.total;
